--- a/ver2/index.html
+++ b/ver2/index.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="./style/styleChrome.css">
 	<!-- Style for loader -->
 	<link rel="stylesheet" type="text/css" href="./style/spin.css">
+	<link rel="stylesheet" type="text/css" href="./style/loader.css">
 
 	<!-- app -->
 	<script type="text/javascript" src="../build/app.js"></script>
@@ -32,10 +33,10 @@
 
 			<img class="center-align" align="center" id="logo" src="logo" />
 
+			<!-- loader -->
+			<div id="loader" style="display: none"></div>
+			<!-- loader -->
 
-			<div class="center-align" align="center" class=".uil-spin-css" id="loading-banner" style="display:none">
-				<img src="img/spin.svg">
-			</div>
 		</div>
 		<!-- logo and animation end -->
 
