started implementing awareness and consciousness

--- a/ver2/index.html
+++ b/ver2/index.html
@@ -10,6 +10,7 @@
 	<script src="./lib/jquery.PrintArea.js"></script>
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="./lib/bootstrap.min.css">
+
 	<!-- Style -->
 	<link rel="stylesheet" href="./style/styleChrome.css">
 	<!-- Style for loader -->
@@ -44,7 +45,7 @@
 
 			<!-- BACKGOUND LAYER -->
 			<img class="container-background" src="./img/Character_sheet.png" />
-			<!-- BACKGOUND LAYER end -->
+			<!-- BACKGOUND LAYER -->
 
 
 			<div class="row">
