updated with logo and updated gulpfile

--- a/ver2/index.html
+++ b/ver2/index.html
@@ -30,7 +30,7 @@
 		<!-- logo and animation start -->
 		<div class="row">
 
-			<img class="center-align" align="center" id="logo" src="logo" />
+			<img class="center-align" align="center" id="logo" src="./img/logo.png" />
 
 			<!-- loader -->
 			<div id="loader" style="display: none"></div>
@@ -111,6 +111,28 @@
 				<!-- SKILLS end -->
 			</div>
 
+			<div class="row">
+				<div class="col-sm-6">
+					<div id="awareness" class="awareness">
+						<!--<button type="button" class="btn btn-danger btn-circle"></button>
+						<button type="button" class="btn btn-default btn-circle"</button>
+						<button type="button" class="btn btn-default btn-circle"</button>
+						<button type="button" class="btn btn-default btn-circle"</button>
+						<button type="button" class="btn btn-default btn-circle"</button>
+						<button type="button" class="btn btn-default btn-circle"</button>-->
+					</div>
+				</div>
+				<div class="col-sm-6 consciousness">
+					<div id="consciousness" class="consciousness">
+						<!--<button type="button" class="btn btn-default btn-circle"</button>
+						<button type="button" class="btn btn-default btn-circle"></button>
+						<button type="button" class="btn btn-default btn-circle"></i></button>
+						<button type="button" class="btn btn-default btn-circle"></button>
+						<button type="button" class="btn btn-default btn-circle"></button>
+						<button type="button" class="btn btn-default btn-circle"></button>-->
+					</div>
+				</div>
+			</div>
 		</div>
 		<!-- paperKnight (print page) end -->
 
