redirected dependencies to build

--- a/ver2/index.html
+++ b/ver2/index.html
@@ -11,13 +11,14 @@
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="./lib/bootstrap.min.css">
 
-	<!-- Style -->
+	<!-- Style 
 	<link rel="stylesheet" href="./style/styleChrome.css">
-	<!-- Style for loader -->
-	<link rel="stylesheet" type="text/css" href="./style/loader.css">
+	<!-- Style for loader 
+	<link rel="stylesheet" type="text/css" href="./style/loader.css">-->
 
 	<!-- app -->
-	<script type="text/javascript" src="../build/app.js"></script>
+	<link rel="stylesheet" type="text/css" href="../build/style.min.css">
+	<script type="text/javascript" src="../build/app.min.js"></script>
 
 </head>
 
