--- a/ver2/index.html
+++ b/ver2/index.html
@@ -43,7 +43,7 @@
 		<div id="paperKnight" class="paperKnight" style="display:none;">
 
 			<!-- BACKGOUND LAYER -->
-			<img class="container-background" src="./img/Character_sheet.png" />
+			<img class="container-background" src="./bin/img/Character_sheet.png" />
 			<!-- BACKGOUND LAYER -->
 
 
